--- a/index.html
+++ b/index.html
@@ -43,6 +43,11 @@
 			<a href="" class="center-nav pull-left">游戏列表</a>
 		</div>	
 	</div>
+	<div class="side-nav">
+		<a href="" class="nav pull-left">游戏列表</a>
+		<a href="" class="nav pull-left">游戏列表</a>
+		<a href="" class="nav pull-left">游戏列表</a>
+	</div>
 	<!--轮播图-->
 </div>
 </div>
